# planetf1

./: .gitignore  clustering.ipynb  data_collection.ipynb  data_prep.ipynb  genetic.ipynb  genetic_exe.ipynb  math.ipynb  planet_fone.db  planetf1-massi.pbix  planetf1.pbix  pyproject.toml  readme.md  requirements.txt  run_ga.py
data/: Costraints.xlsx  app_data.py  calendar.csv  fone_calendar.csv  fone_geography.csv  planet_fone.db  sqlite_sequence.csv  training_regression_calendar.csv  travel_logistic.csv
fastf1_cache/: fastf1_http_cache.sqlite
logs/: 2025_NR_NC_20250525_150026.json  2025_R_C_20250525_160345.json  2025_R_C_20250525_162800.json  2025_R_NC_20250525_151358.json  2025_R_NC_20250525_171031.json  BRONZE_20250525_172314.json  GA_RUN_OUTPUT_20250524_110353.json  GA_RUN_OUTPUT_20250524_110559.json  GA_RUN_OUTPUT_20250524_115207.json  GA_RUN_OUTPUT_20250524_115708.json  GA_RUN_OUTPUT_20250524_135455.json  GA_RUN_OUTPUT_20250525_123611.json  GA_RUN_OUTPUT_20250525_130152.json  GA_RUN_OUTPUT_20250525_134803.json  GOLD_20250525_173219.json  GOLD_EXP_20250525_173219.json  GOLD_NC_20250525_173219.json  Pres_Day_Test_20250526_083050.json  SILVER_20250525_172726.json  TEST_20250524_150957.json
models/: clustering.py  fone_regression_air_model.pkl  fone_regression_truck_model.pkl  genetic_ops.py  regression.py
notebooks/: clustering.ipynb  data_collection.ipynb  data_collection_mad.ipynb  data_prep.ipynb  genetic.ipynb  logs_debugging.ipynb  math.ipynb  regression_eng.ipynb  visuals_presentation.ipynb
src/: __init__.py  app.py  math.ipynb
utils/: logs.py  sql.py  (+2 more)
(+1 files in other folders)
