[project]
name = "planetf1"
version = "0.1.0"
description = "Genetic Algorithm to optimize F1 calendar"
authors = [
    {name = "Massi",email = "massimiliano.nap@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deap (==1.4.2)",
    "fastf1 (==3.5.3)",
    "folium (==0.19.5)",
    "joblib (==1.4.2)",
    "kneed (==0.8.5)",
    "matplotlib (==3.8.2)",
    "numpy (==1.26.2)",
    "openrouteservice (==2.3.3)",
    "pandas (==2.1.3)",
    "plotly (==5.24.1)",
    "pydeck (==0.8.1b0)",
    "python-docx (==1.1.2)",
    "scikit-learn (==1.6.1)",
    "seaborn (==0.13.2)",
    "streamlit (==1.44.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
